@@ -9,6 +9,7 @@
  */
 
 error_reporting (E_ALL);
+date_default_timezone_set('UTC');
 
 /* configure path */
 
