@@ -95,6 +95,8 @@ INSERT INTO base_translation VALUES (NULL, 'feed/index', 'en_US', 'feed_add', "f
 INSERT INTO base_translation VALUES (NULL, 'feed/index', 'en_US', 'feed_import', "feed import");
 INSERT INTO base_translation VALUES (NULL, 'feed/index', 'en_US', 'feed_add_url', "URL");
 INSERT INTO base_translation VALUES (NULL, 'feed/index', 'en_US', 'feed_not_found', "feed not found");
+INSERT INTO base_translation VALUES (NULL, 'feed/index', 'en_US', 'feed_error', "this feed contain errors");
+INSERT INTO base_translation VALUES (NULL, 'feed/index', 'en_US', 'invalid_url', "invalid url");
 INSERT INTO base_translation VALUES (NULL, 'feed/index', 'en_US', 'new_feed_instruction', "No registered feeds. To add new feed, click in the \"feed_add\" link");
 INSERT INTO base_translation VALUES (NULL, 'dashboard/index', 'en_US', 'show_feeds', "show feeds");
 INSERT INTO base_translation VALUES (NULL, 'dashboard/index', 'en_US', 'all', "all");
